// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ausweis compatibility result screen is according to the designs when: scanned card is deactivated 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        Object {
          "flex": 1,
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#000",
            "height": 0,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#000",
              "marginBottom": -0,
              "paddingBottom": 0,
            },
            Object {},
            Object {},
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "flex-end",
              "opacity": 1,
            }
          }
          testID="dismissable-background"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 3,
                "justifyContent": "center",
                "marginTop": 64,
              }
            }
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                  "marginBottom": 72,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "paddingTop": 5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(255,255,255,0.85)",
                      "fontFamily": "TTCommons-Medium",
                      "fontSize": 28,
                      "letterSpacing": 0,
                      "lineHeight": 32,
                    },
                    undefined,
                  ]
                }
              >
                AusweisCompatibilityStatus.header
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 52,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "paddingTop": 5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#ffcc01",
                      "fontFamily": "TTCommons-Regular",
                      "fontSize": 22,
                      "letterSpacing": 0.15,
                      "lineHeight": 26,
                    },
                    undefined,
                  ]
                }
              >
                AusweisCompatibilityStatus.error
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "rgba(255,255,255,0.9)",
                  "borderRadius": 34,
                  "borderWidth": 3,
                  "height": 67,
                  "justifyContent": "center",
                  "marginBottom": 20,
                  "padding": 17,
                  "width": 67,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight="100%"
                bbWidth="100%"
                focusable={false}
                height="100%"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": "100%",
                      "width": "100%",
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="100%"
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M10.852 12.004L.23 22.7a.764.764 0 000 1.076.75.75 0 001.068 0L12 13l10.703 10.778a.75.75 0 001.069 0 .764.764 0 000-1.076L13.148 12.004l10.63-10.706a.764.764 0 000-1.075.752.752 0 00-1.067 0L12 11.008 1.289.223a.752.752 0 00-1.068 0 .764.764 0 000 1.076l10.631 10.705z"
                    fill={3875536895}
                    fillRule={1}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "paddingTop": 5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(255, 255, 255, 0.8)",
                    "fontFamily": "TTCommons-Regular",
                    "fontSize": 22,
                    "letterSpacing": 0.15,
                    "lineHeight": 26,
                  },
                  undefined,
                ]
              }
            >
              AusweisCompatibilityStatus.error
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Ausweis compatibility result screen is according to the designs when: scanned card is fully supported 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        Object {
          "flex": 1,
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#000",
            "height": 0,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#000",
              "marginBottom": -0,
              "paddingBottom": 0,
            },
            Object {},
            Object {},
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "flex-end",
              "opacity": 1,
            }
          }
          testID="dismissable-background"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 3,
                "justifyContent": "center",
                "marginTop": 64,
              }
            }
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                  "marginBottom": 72,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "paddingTop": 5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(255,255,255,0.85)",
                      "fontFamily": "TTCommons-Medium",
                      "fontSize": 28,
                      "letterSpacing": 0,
                      "lineHeight": 32,
                    },
                    undefined,
                  ]
                }
              >
                AusweisCompatibilityStatus.header
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 52,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "paddingVertical": 16,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "paddingTop": 5,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.8)",
                        "fontFamily": "TTCommons-Regular",
                        "fontSize": 22,
                        "letterSpacing": 0.15,
                        "lineHeight": 26,
                      },
                      undefined,
                    ]
                  }
                >
                  AusweisCompatibilityStatus.status1
                </Text>
                <View
                  style={
                    Object {
                      "height": 20,
                      "marginTop": 16,
                      "width": 20,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="100%"
                    bbWidth="100%"
                    focusable={false}
                    height="100%"
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        Object {
                          "flex": 0,
                          "height": "100%",
                          "width": "100%",
                        },
                      ]
                    }
                    vbHeight={20}
                    vbWidth={20}
                    width="100%"
                  >
                    <RNSVGGroup>
                      <RNSVGGroup
                        fill={null}
                        fillRule={1}
                        propList={
                          Array [
                            "fill",
                            "fillRule",
                          ]
                        }
                      >
                        <RNSVGPath
                          d="M17.071 2.929A9.935 9.935 0 0010 0a9.935 9.935 0 00-7.071 2.929A9.935 9.935 0 000 10a9.934 9.934 0 002.929 7.071A9.935 9.935 0 0010 20a9.935 9.935 0 007.071-2.929A9.935 9.935 0 0020 10a9.935 9.935 0 00-2.929-7.071z"
                          fill={4283584961}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        />
                        <RNSVGPath
                          d="M14.727 7.172a.586.586 0 00-.829 0l-5.174 5.174L6 9.622a.586.586 0 00-.828.829l3.138 3.138a.584.584 0 00.828 0L14.727 8a.586.586 0 000-.828z"
                          fill={4294967295}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        />
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "paddingVertical": 16,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "paddingTop": 5,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.8)",
                        "fontFamily": "TTCommons-Regular",
                        "fontSize": 22,
                        "letterSpacing": 0.15,
                        "lineHeight": 26,
                      },
                      undefined,
                    ]
                  }
                >
                  AusweisCompatibilityStatus.status2
                </Text>
                <View
                  style={
                    Object {
                      "height": 20,
                      "marginTop": 16,
                      "width": 20,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="100%"
                    bbWidth="100%"
                    focusable={false}
                    height="100%"
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        Object {
                          "flex": 0,
                          "height": "100%",
                          "width": "100%",
                        },
                      ]
                    }
                    vbHeight={20}
                    vbWidth={20}
                    width="100%"
                  >
                    <RNSVGGroup>
                      <RNSVGGroup
                        fill={null}
                        fillRule={1}
                        propList={
                          Array [
                            "fill",
                            "fillRule",
                          ]
                        }
                      >
                        <RNSVGPath
                          d="M17.071 2.929A9.935 9.935 0 0010 0a9.935 9.935 0 00-7.071 2.929A9.935 9.935 0 000 10a9.934 9.934 0 002.929 7.071A9.935 9.935 0 0010 20a9.935 9.935 0 007.071-2.929A9.935 9.935 0 0020 10a9.935 9.935 0 00-2.929-7.071z"
                          fill={4283584961}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        />
                        <RNSVGPath
                          d="M14.727 7.172a.586.586 0 00-.829 0l-5.174 5.174L6 9.622a.586.586 0 00-.828.829l3.138 3.138a.584.584 0 00.828 0L14.727 8a.586.586 0 000-.828z"
                          fill={4294967295}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        />
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "paddingVertical": 16,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "paddingTop": 5,
                        "textAlign": "center",
                      },
                      Object {
                        "color": "rgba(255, 255, 255, 0.8)",
                        "fontFamily": "TTCommons-Regular",
                        "fontSize": 22,
                        "letterSpacing": 0.15,
                        "lineHeight": 26,
                      },
                      undefined,
                    ]
                  }
                >
                  AusweisCompatibilityStatus.status3
                </Text>
                <View
                  style={
                    Object {
                      "height": 20,
                      "marginTop": 16,
                      "width": 20,
                    }
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="100%"
                    bbWidth="100%"
                    focusable={false}
                    height="100%"
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        Object {
                          "flex": 0,
                          "height": "100%",
                          "width": "100%",
                        },
                      ]
                    }
                    vbHeight={20}
                    vbWidth={20}
                    width="100%"
                  >
                    <RNSVGGroup>
                      <RNSVGGroup
                        fill={null}
                        fillRule={1}
                        propList={
                          Array [
                            "fill",
                            "fillRule",
                          ]
                        }
                      >
                        <RNSVGPath
                          d="M17.071 2.929A9.935 9.935 0 0010 0a9.935 9.935 0 00-7.071 2.929A9.935 9.935 0 000 10a9.934 9.934 0 002.929 7.071A9.935 9.935 0 0010 20a9.935 9.935 0 007.071-2.929A9.935 9.935 0 0020 10a9.935 9.935 0 00-2.929-7.071z"
                          fill={4283584961}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        />
                        <RNSVGPath
                          d="M14.727 7.172a.586.586 0 00-.829 0l-5.174 5.174L6 9.622a.586.586 0 00-.828.829l3.138 3.138a.584.584 0 00.828 0L14.727 8a.586.586 0 000-.828z"
                          fill={4294967295}
                          propList={
                            Array [
                              "fill",
                            ]
                          }
                        />
                      </RNSVGGroup>
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "rgba(255,255,255,0.9)",
                  "borderRadius": 34,
                  "borderWidth": 3,
                  "height": 67,
                  "justifyContent": "center",
                  "marginBottom": 20,
                  "padding": 17,
                  "width": 67,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight="100%"
                bbWidth="100%"
                focusable={false}
                height="100%"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": "100%",
                      "width": "100%",
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={32}
                width="100%"
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M31.333.357a1.219 1.219 0 00-1.724 0L9.852 20.114 2.08 12.343a1.219 1.219 0 10-1.724 1.724L8.99 22.7a1.22 1.22 0 001.724 0L31.333 2.08a1.219 1.219 0 000-1.723z"
                    fill={3875536895}
                    fillRule={1}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "paddingTop": 5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(255, 255, 255, 0.8)",
                    "fontFamily": "TTCommons-Regular",
                    "fontSize": 22,
                    "letterSpacing": 0.15,
                    "lineHeight": 26,
                  },
                  undefined,
                ]
              }
            >
              AusweisCompatibilityStatus.success
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Ausweis compatibility result screen is according to the designs when: scanned card is inopeartive 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
        Object {
          "flex": 1,
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "justifyContent": "center",
          },
          false,
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#000",
            "height": 0,
            "width": "100%",
          }
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "width": "100%",
            },
            Object {
              "backgroundColor": "#000",
              "marginBottom": -0,
              "paddingBottom": 0,
            },
            Object {},
            Object {},
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "flex-end",
              "opacity": 1,
            }
          }
          testID="dismissable-background"
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 3,
                "justifyContent": "center",
                "marginTop": 64,
              }
            }
          >
            <View
              style={
                Object {
                  "justifyContent": "flex-end",
                  "marginBottom": 72,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "paddingTop": 5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(255,255,255,0.85)",
                      "fontFamily": "TTCommons-Medium",
                      "fontSize": 28,
                      "letterSpacing": 0,
                      "lineHeight": 32,
                    },
                    undefined,
                  ]
                }
              >
                AusweisCompatibilityStatus.header
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "flex-start",
                  "paddingHorizontal": 52,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "paddingTop": 5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#ffcc01",
                      "fontFamily": "TTCommons-Regular",
                      "fontSize": 22,
                      "letterSpacing": 0.15,
                      "lineHeight": 26,
                    },
                    undefined,
                  ]
                }
              >
                AusweisCompatibilityStatus.error
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "rgba(255,255,255,0.9)",
                  "borderRadius": 34,
                  "borderWidth": 3,
                  "height": 67,
                  "justifyContent": "center",
                  "marginBottom": 20,
                  "padding": 17,
                  "width": 67,
                }
              }
            >
              <RNSVGSvgView
                align="xMidYMid"
                bbHeight="100%"
                bbWidth="100%"
                focusable={false}
                height="100%"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    Object {
                      "flex": 0,
                      "height": "100%",
                      "width": "100%",
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width="100%"
              >
                <RNSVGGroup>
                  <RNSVGPath
                    d="M10.852 12.004L.23 22.7a.764.764 0 000 1.076.75.75 0 001.068 0L12 13l10.703 10.778a.75.75 0 001.069 0 .764.764 0 000-1.076L13.148 12.004l10.63-10.706a.764.764 0 000-1.075.752.752 0 00-1.067 0L12 11.008 1.289.223a.752.752 0 00-1.068 0 .764.764 0 000 1.076l10.631 10.705z"
                    fill={3875536895}
                    fillRule={1}
                    propList={
                      Array [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "paddingTop": 5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "rgba(255, 255, 255, 0.8)",
                    "fontFamily": "TTCommons-Regular",
                    "fontSize": 22,
                    "letterSpacing": 0.15,
                    "lineHeight": 26,
                  },
                  undefined,
                ]
              }
            >
              AusweisCompatibilityStatus.error
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
